Updated fix with Drawer z-index

--- a/less/drawer.less
+++ b/less/drawer.less
@@ -11,7 +11,7 @@
     right:-320px;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-    z-index:-1;
+    z-index:0;
     .drawer-toolbar {
         border-bottom: 1px solid darken(@item-color, 10%);
     }
